[project]
name = "l4s-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gputil>=1.4.0",
    "huggingface-hub>=0.19",
    "munch==4.0.0",
    "numpy==1.24.4",
    "pandas>=2.0.3",
    "peft==0.6.2",
    "torch==2.1.0",
    "transformers>=4.36",
    "yacs>=0.1.8",
]
