[project]
name = "l4s-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "bitsandbytes>=0.45.5",
    "gputil>=1.4.0",
    "huggingface-hub>=0.19",
    "matplotlib>=3.7.5",
    "munch==4.0.0",
    "numpy==1.24.4",
    "nvitop>=1.6.0",
    "pandas>=2.0.3",
    "peft==0.6.2",
    "sentencepiece>=0.2.0",
    "torch==2.1.0",
    "transformers>=4.36",
    "yacs>=0.1.8",
]
